#2157 use flex display instead of table display for course list container for correct alignment on IE

--- a/funsite/static/funsite/css/fun.css
+++ b/funsite/static/funsite/css/fun.css
@@ -545,6 +545,7 @@ ul.breadcrumbs li a:hover {
     .course-list-table .right {
         padding-left: 0 !important;
         padding-right: 0 !important;
+        width: 100% !important;
     }
 
     .university-logo {
@@ -1126,6 +1127,7 @@ ul.universities-list {
 
 
 /* Courses filtering and searching courses_api/index.html */
+
 .course-list .list ul {
     list-style-type: none;
     width: 100%;
@@ -1161,6 +1163,7 @@ ul.universities-list {
     -webkit-flex-flow: row wrap;
     -ms-flex-flow: row wrap;
     -moz-flex-flow: row wrap;
+
 }
 .course-list .list ul li {
     flex: auto;
@@ -1173,19 +1176,25 @@ ul.universities-list {
 }
 
 .course-list-table {
-    display: table;
+    display: flex;
 }
 
 .course-list-table .left {
-    display: table-cell;
     vertical-align: top;
     width: 325px;
     background-color: #06213B;
 }
 
+.course-list-table .right {
+    vertical-align: top;
+    width: 80%;
+    padding-left: 38px;
+    padding-right: 12px;
+}
+
+
 .small-device-filter {
     background-color: #062644;
-    display: table-cell;
     padding: 24px;
     margin-bottom: 24px;
     font-weight: 300;
@@ -1218,16 +1227,6 @@ ul.universities-list {
 
 
 
-
-
-.course-list-table .right {
-    display: table-cell;
-    vertical-align: top;
-    width: 100%;
-    padding-left: 38px;
-    padding-right: 12px;
-}
-
 .result-navigation {
     border: 1px solid #CBCCCD;
     margin: 0 0 24px 0;
@@ -1256,6 +1255,7 @@ ul.universities-list {
     padding-left: 48px;
     padding-right: 48px;
     overflow: visible;
+    height: 100%;
 }
 .criteria-overlay {
     left: 325px;
@@ -1267,6 +1267,7 @@ ul.universities-list {
     position: absolute;
     background-color: #08223C;
     z-index: 20;
+
 }
 
 
@@ -1301,7 +1302,8 @@ ul.universities-list {
 }
 
 .filters div.title {
-    margin-top: 20px;
+    margin-top: 0;
+    padding-top:20px;
     color: #3976BC;
     font-size: 32px;
     font-weight: 200;
